fixed negative z-index dead text problem

--- a/htdocs/css/pcs-default.css
+++ b/htdocs/css/pcs-default.css
@@ -18,6 +18,8 @@ div#top-nav {
         color:#00a8e1;
         margin:0;
         padding:0
+        position:relative;
+        z-index:1000;
 }
 
 
@@ -100,7 +102,6 @@ div#top-nav ul li ul {
 
 }
 div#top-nav ul li ul span {
-       z-index:500; 
 }
 
 div#top-nav ul li ul li {
@@ -171,3 +172,31 @@ li#current-link #tooltip {
 li#staff-link #tooltip {
         color:#33cbcc;
 }
+
+
+/**Content Rules**/
+body div#main div#content, 
+body div#main div#sidebar {
+        padding-top:35px;
+        padding-bottom:39px;
+}
+body div#main div#content {
+        width:691px; 
+        float:right;
+}
+body div#main div#sidebar {
+        width:222px; 
+        float:left;
+}
+
+body div#main div#content h1 {
+        margin:0;
+        padding:0;
+        font-size:1.6em;
+        z-index:-1;
+        position:relative;
+}
+body div#main div#content h1 * {
+        z-index:0;
+}
+/**End Content Rules**/
